--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -31,17 +31,14 @@
   - { name: rackspace-novaclient, version: 2.1 }
   - { name: python-heatclient, version: 2.0.0 }
 
-- include: server.yml
-  when: mode == "server" or mode == "all"
-
-- include: alert_manager.yml
-  when: mode == "server" or mode == "all"
-
 - include: blackbox_exporter.yml
   when: mode == "server" or mode == "all"
 
-- include: grafana.yml
-  when: mode == "server" or mode == "all"
+- include: node_exporter.yml
+  when: mode == "exporter" or mode == "all"
+
+- include: runner_exporter.yml
+  when: mode == "runner"
 
 - include: grafana_ceph.yml
   when: mode == "exporter" or mode == "all"
@@ -52,8 +49,18 @@
 - include: grafana_kubernetes.yml
   when: mode == "exporter" or mode == "all"
 
-- include: node_exporter.yml
-  when: mode == "exporter" or mode == "all"
+# launch prom/alert/grafana after configuration
+- include: server.yml
+  when: mode == "server" or mode == "all"
+  tags:
+  - cron
 
-- include: runner_exporter.yml
-  when: mode == "runner"
+- include: alert_manager.yml
+  when: mode == "server" or mode == "all"
+  tags:
+  - cron
+
+- include: grafana.yml
+  when: mode == "server" or mode == "all"
+  tags:
+  - cron
