--- a/upgrade_helm.yml
+++ b/upgrade_helm.yml
@@ -5,4 +5,4 @@
   become: yes
   tasks: 
     - include: roles/helm/tasks/remove.yml
-    - include: roles/helm/tasks/install_cluster.yml
+    # - include: roles/helm/tasks/install_cluster.yml
