--- a/roles/helm/tasks/remove.yml
+++ b/roles/helm/tasks/remove.yml
@@ -21,14 +21,11 @@
     recurse: yes
   register: files_to_delete
 
-# - debug: Display Helm files to delete 
-#     msg: "This is the list {{ files_to_delete }}" 
-#   verbosity: 1
-
 - name: Remove all Helm files
   file:
     path: "{{ item.path }}"
     state: absent
+  become: yes
   with_items: "{{ files_to_delete.files }}"
 
 - name: Find alternative locations also
@@ -50,12 +47,6 @@
     path: '{{ minikube_install_dir }}/{{ helm_name }}'
     state: absent
   become: yes
-
-# - name: Remove Helm link
-#   file:
-#     path: '{{ minikube_install_dir }}/{{ helm_name }}-{{ helm_version }}'
-#     state: absent
-#   become: yes
 
 - name: Remove config files
   file:
