Nuked some more remaining Helm configs and bits and pieces.

--- a/roles/helm/tasks/install_cluster.yml
+++ b/roles/helm/tasks/install_cluster.yml
@@ -4,11 +4,11 @@
     dest: /root/get_helm.sh
     mode: '0700'
 
-- name: Replace "/usr/local/bin" by "/bin"
-  replace:
-    path: /root/get_helm.sh
-    regexp: '/usr/local/bin'
-    replace: "/bin"
+# - name: Replace "/usr/local/bin" by "/bin"
+#   replace:
+#     path: /root/get_helm.sh
+#     regexp: '/usr/local/bin'
+#     replace: "/bin"
 
 - name: Install Helm
   shell: "/root/get_helm.sh -v {{ helm_version }}"
