Refactored Helm 3 - to be tested

--- a/roles/helm/tasks/main.yml
+++ b/roles/helm/tasks/main.yml
@@ -12,56 +12,5 @@
   loop_control:
     loop_var: docker_vars
 
-- name: set facts for helm
-  set_fact:
-    "user_home": "{{ lookup('env','HOME') }}"
-
-- name: Check if helm is installed
-  stat:
-    path: '{{ minikube_install_dir }}/{{ helm_name }}'
-  register: helm_installed
-
-- name: ensure target directory
-  file:
-    path: '{{ minikube_install_dir }}'
-    state: directory
-    mode: '0755'
-  become: yes
-
-- name: Install Helm
-  block:
-    - name: download Helm
-      unarchive:
-        src: '{{ helm_url }}'
-        dest: '/tmp/'
-        remote_src: yes
-      become: yes
-
-    - name: Move helm into place
-      command: 'mv /tmp/{{ minikube_platform }}/{{ helm_name }} {{ minikube_install_dir }}/{{ helm_name }}-{{ helm_version }}'
-      args:
-        creates: '{{ minikube_install_dir }}/{{ helm_name }}-{{ helm_version }}'
-      become: yes
-
-    - debug:
-        var: helm_installed
-        verbosity: 2
-
-    - name: link installed helm
-      file:
-        src: '{{ minikube_install_dir }}/{{ helm_name }}-{{ helm_version }}'
-        dest: '{{ minikube_install_dir }}/{{ helm_name }}'
-        state: link
-      become: yes
-
-    - name: Tidy up Helm tmp
-      file:
-        path: '/tmp/{{ minikube_platform }}'
-        state: absent
-      become: yes
-  when: helm_installed.stat.exists == false
-
-- name: Add stable helm repo
-  shell: |
-    helm repo add stable {{helm_stable_repo_url}}
-    helm repo update;
+- include: remove.yml
+- include: install.yml
