--- a/roles/helm/tasks/install.yml
+++ b/roles/helm/tasks/install.yml
@@ -4,24 +4,28 @@
     dest: /tmp/get_helm.sh
     mode: '0700'
 
-- name: Add /usr/local/bin to system path
-  copy:
-    dest: 
-    shell: export PATH=/usr/local/bin:$PATH
-
-- name: Add /usr/local/bin to system path in profile
+- name: Add /usr/local/bin to system path in profile.d
   copy: 
-    content: pathmunge /usr/local/bin
+    content: export PATH=$PATH:/usr/local/bin
     dest: /etc/profile.d/helm_path.sh
     force: no
   become: yes
-  when: ansible_distribution == 'CentOS'
 
 - name: Make helm_path file executable
   file:
     path: /etc/profile.d/helm_path.sh
     mode: +x
   become: yes
+
+- name: Add /usr/local/bin to system path 
+  shell: /etc/profile.d/helm_path.sh
+  args:
+    executable: /bin/bash
+
+- name: Add /usr/local/bin to system path in bashrc
+  lineinfile:
+    path: "{{localhome}}/.bashrc"
+    line: export PATH=$PATH:/usr/local/bin
 
 - name: Install Helm
   shell: "/tmp/get_helm.sh -v {{ helm_version }}"
