ST-332 - Installs Helm on Minikube and kubeadm based cluster. Removes Tiller plugin. Upgrades existing Helm 2 to Helm 3. Updated documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+heat-cluster
+heat-cluster/*
 .vscode
 .idea
 .vagrant
@@ -5,9 +7,12 @@
 *.retry
 ubuntu-bionic-18.04-cloudimg-console.log
 PrivateRules.mak
+private_vars.yml
+inventory_helm3
 *.pyc
 venv
 build
 *_build*
 *Pipfile*
+*rc.sh
 
