--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -107,7 +107,7 @@
       become_flags: '-E -S -n'
       when: "minikube_use_calico"
 
-    - name: Start Minikube with option vm-driver={{ minikube_driver }}
+    - name: Start Minikube with option vm-driver={{ minikube_driver }} without Calico
       shell: >
         minikube start  --disk-size  {{ minikube_disk_size }}
         --memory  {{ minikube_memory }}
@@ -209,32 +209,9 @@
       become_flags: '-E -S -n'
       when: '"enabled" in ingress_state'
 
-    # - name: Copy up Traefik template
-    #   copy:
-    #     src: files/traefik-minikube.yaml
-    #     dest: /tmp/traefik-minikube.yaml
-
-    # - name: Launch Traefik
-    #   shell: 'kubectl apply -f /tmp/traefik-minikube.yaml'
-    #   args:
-    #     executable: /bin/bash
-
-    # - name: Tidy up Traefik tmp
-    #   file:
-    #     path: '/tmp/traefik-minikube.yaml'
-    #     state: absent
-    #   become: yes
     - name: Install traefik
-      shell: |
-        helm init
-        TMP=`mktemp -d`
-        helm fetch stable/traefik --untar --untardir $$TMP
-        helm template $$TMP/traefik -n traefik --namespace kube-system --name traefik0 --tiller-namespace kube-system --set externalIP={{ansible_default_ipv4.address}} | kubectl apply -n kube-system  -f -;
-        rm -rf $$TMP
-      become: true
-      become_method: sudo
-      become_flags: '-E -S -n'
-
+      shell:
+        helm install traefik0 stable/traefik --namespace=kube-system --set externalIP={{ansible_default_ipv4.address}}
   when: "not minikube_use_nginx"
 
 # https://github.com/kubernetes/kube-state-metrics/tree/master/examples/standard
