--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: set facts for minikube
   set_fact:
-    "minikube_use_calico": "{{ use_calico|bool }}"
+    "minikube_use_calico": "false"
     "minikube_use_nginx": "{{ use_nginx|bool }}"
     "user_home": "{{ lookup('env','HOME') }}"
     "minikube_check": !unsafe >-
