ST-336 - handle minikube status non-zero

--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -25,6 +25,7 @@
   shell: "{{ minikube_check }} | grep 'host: '"
   args:
     executable: /bin/bash
+  ignore_errors: true
   register: starting_minikube_status
 
 - name: Install Minikube
