--- a/roles/prometheus/tasks/grafana_ceph.yml
+++ b/roles/prometheus/tasks/grafana_ceph.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: make sure grafana configuration directories exist
+- name: ceph-dashboard make sure grafana configuration directories exist
   file:
     path: "{{ item }}"
     state: directory
@@ -10,13 +10,13 @@
     - "/etc/grafana/provisioning/dashboards/ceph-dashboard"
     - "/etc/grafana/provisioning/notifiers"
 
-- name: download ceph grafana dashboards
+- name: ceph-dashboard download ceph grafana dashboards
   get_url:
     url: "https://raw.githubusercontent.com/ceph/ceph/{{ grafana_dashboard_version }}/monitoring/grafana/dashboards/{{ item }}"
     dest: "/etc/grafana/provisioning/dashboards/ceph-dashboard/{{ item }}"
   with_items: "{{ grafana_dashboard_files }}"
 
-- name: Write dashboards provisioning config file
+- name: ceph-dashboard Write dashboards provisioning config file
   template:
     src: dashboards-ceph-dashboard.yml.j2
     dest: /etc/grafana/provisioning/dashboards/ceph-dashboard.yml
