--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -63,7 +63,9 @@ docker_compose_version: '1.23.2'
 start_mysql_server: 'no'
 install_mysql: 'no'
 
+prometheus_url: https://alerts.engageska-portugal.pt
 prometheus_docker_tags: 'v2.16.0'
+prometheus_alertmanager_url: http://192.168.93.26:9093
 prometheus_alertmanager_docker_tags: 'v0.20.0'
 prometheus_bleckbox_exporter_docker_tags: 'v0.16.0'
 grafana_docker_tags: '6.6.2'
