--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,13 +12,13 @@ test_ubuntu_18:
   - export DEBIAN_FRONTEND=noninteractive
   - apt-get update
   - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
-  script:  
-  - apt-add-repository --yes --update ppa:ansible/ansible 
+  script:
+  - apt-add-repository --yes --update ppa:ansible/ansible
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
   - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
-  
+
 test_ubuntu_16:
   image: ubuntu:16.04
   stage: build
@@ -30,7 +30,7 @@ test_ubuntu_16:
   - apt-get update
   - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:
-  - apt-add-repository --yes --update ppa:ansible/ansible 
+  - apt-add-repository --yes --update ppa:ansible/ansible
   - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
   - source /venv/bin/activate
@@ -45,9 +45,9 @@ test_debian_stretch-slim:
   - export TERM=linux
   - export DEBIAN_FRONTEND=noninteractive
   - apt-get update
-  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
+  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt python3-apt
   script:
-  - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" >> /etc/apt/sources.list
+  - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" > /etc/apt/sources.list.d/ansible.list
   - apt-get install gnupg2 -y
   - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 93C4A3FD7BB9C367
   - apt-get update
@@ -65,9 +65,9 @@ test_debian_buster-slim:
   - export TERM=linux
   - export DEBIAN_FRONTEND=noninteractive
   - apt-get update
-  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
+  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt python3-apt
   script:
-  - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" >> /etc/apt/sources.list
+  - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" > /etc/apt/sources.list.d/ansible.list
   - apt-get install gnupg2 -y
   - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 93C4A3FD7BB9C367
   - apt-get update
@@ -81,5 +81,5 @@ hog_runner_cpu:
   stage: build
   tags:
     - docker-executor-prom
-  script: 
+  script:
     - ./data/loadcpu.sh 8 10
