--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ test_ubuntu_18:
   - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:
   - apt-add-repository --yes --update ppa:ansible/ansible
-  - apt-get -y install ansible
+  - apt-get -y install ansible python-apt python3-apt
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
   - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
@@ -31,7 +31,7 @@ test_ubuntu_16:
   - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:
   - apt-add-repository --yes --update ppa:ansible/ansible
-  - apt-get -y install ansible
+  - apt-get -y install ansible python-apt python3-apt
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
   - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
@@ -45,13 +45,13 @@ test_debian_stretch-slim:
   - export TERM=linux
   - export DEBIAN_FRONTEND=noninteractive
   - apt-get update
-  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt python3-apt
+  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:
   - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" > /etc/apt/sources.list.d/ansible.list
   - apt-get install gnupg2 -y
   - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 93C4A3FD7BB9C367
   - apt-get update
-  - apt-get -y install ansible
+  - apt-get -y install ansible python-apt python3-apt
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
   - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
@@ -65,13 +65,13 @@ test_debian_buster-slim:
   - export TERM=linux
   - export DEBIAN_FRONTEND=noninteractive
   - apt-get update
-  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt python3-apt
+  - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common python-apt
   script:
   - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" > /etc/apt/sources.list.d/ansible.list
   - apt-get install gnupg2 -y
   - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 93C4A3FD7BB9C367
   - apt-get update
-  - apt-get -y install ansible
+  - apt-get -y install ansible python-apt python3-apt
   - ansible-playbook -i hosts deploy_tangoenv.yml --extra-vars "install_ska_docker='no' start_tango='no' install_ide='no'"
   - source /venv/bin/activate
   - python3 -c "import tango; print(tango.utils.info())"
