ST-324 - fix k8s config

--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -155,9 +155,9 @@
 
 - name: Setup config folder # noqa 301 Commands should not change things if nothing needs doing
   shell: |
-    [ ! -f {{ k8s_certificate_authority }} ] || cp -rf {{ k8s_certificate_authority }} {{ prometheus_config_dir }}
-    [ ! -f {{ k8s_client_certificate }} ] || cp -rf {{ k8s_client_certificate }} {{ prometheus_config_dir }}
-    [ ! -f {{ k8s_client_key }} ] || cp -rf {{ k8s_client_key }} {{ prometheus_config_dir }}
+    [ ! -f "{{ k8s_certificate_authority }}" ] || cp -rf {{ k8s_certificate_authority }} {{ prometheus_config_dir }}
+    [ ! -f "{{ k8s_client_certificate }}" ] || cp -rf {{ k8s_client_certificate }} {{ prometheus_config_dir }}
+    [ ! -f "{{ k8s_client_key }}" ] || cp -rf {{ k8s_client_key }} {{ prometheus_config_dir }}
 
 - name: Stop prometheus container
   docker_container:
