--- a/roles/prometheus/tasks/grafana_gitlab_runners.yml
+++ b/roles/prometheus/tasks/grafana_gitlab_runners.yml
@@ -16,6 +16,7 @@
     dest: "/etc/grafana/provisioning/dashboards/gitlab-runners/{{ item }}"
   with_items:
     - simple.json
+    - gitlab-runner-service_rev2.json
 
 - name: Write dashboards provisioning config file
   template:
