--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -8,16 +8,19 @@
       - python3-requests
     state: present
     update_cache: yes
+  when: mode == "server" or mode == "all"
 
 - name: Download get-pip.py
   get_url:
     url: https://bootstrap.pypa.io/get-pip.py
     dest: /tmp/get-pip.py
     mode: '0744'
+  when: mode == "server" or mode == "all"
 
 - name: get-pip # noqa 301 Commands should not change things if nothing needs doing
   shell: |
     python3 /tmp/get-pip.py
+  when: mode == "server" or mode == "all"
 
 - name: install certain python modules for docker
   pip:
@@ -30,6 +33,7 @@
   - { name: python-novaclient, version: 2.27.0 }
   - { name: rackspace-novaclient, version: 2.1 }
   - { name: python-heatclient, version: 2.0.0 }
+  when: mode == "server" or mode == "all"
 
 - include: blackbox_exporter.yml
   when: mode == "server" or mode == "all"
@@ -39,6 +43,9 @@
 
 - include: runner_exporter.yml
   when: mode == "runner"
+
+- include: docker_exporter.yml
+  when: mode == "docker"
 
 - include: grafana_ceph.yml
   when: mode == "server" or mode == "all"
