--- a/roles/prometheus/tasks/docker_exporter.yml
+++ b/roles/prometheus/tasks/docker_exporter.yml
@@ -1,13 +1,3 @@
-- name: Check if docker prometheus exporter is already set
-  wait_for:
-    port: 9323
-    timeout: 3
-  register: check_port
-  ignore_errors: true
-
-- debug:
-    var: check_port
-
 - name: Check that the daemon.json exists
   stat:
     path: /etc/docker/daemon.json
@@ -21,40 +11,38 @@
       "metrics-addr" : "127.0.0.1:9323",
       "experimental" : true
     }
-  when: not stat_result.stat.exists and check_port.state != "started"
+  when: not stat_result.stat.exists 
 
 - name: Load daemon.json
-  include_vars:
-    file: /etc/docker/daemon.json
-    name: daemon
-  when: check_port.state != "started"
+  shell: cat "/etc/docker/daemon.json"
+  register: daemon
+
+- set_fact:
+    daemon: "{{ daemon.stdout | default([]) }}"
 
 - debug:
     var: daemon
-  when: check_port.state != "started"
 
 - name: Configure metrics-addr
   set_fact:
     daemon: "{{ daemon | default([]) | combine({ 'metrics-addr': '127.0.0.1:9323' }) }}"
-  when: daemon['metrics-addr'] is not defined and check_port.state != "started"
+  when: daemon['metrics-addr'] is not defined 
 
 - name: Configure experimental
   set_fact:
     daemon: "{{ daemon | default([]) | combine({ 'experimental': true }) }}"
-  when: daemon['experimental'] is not defined and check_port.state != "started"
+  when: daemon['experimental'] is not defined 
 
 - debug:
     var: daemon
-  when: check_port.state != "started"
 
 - name: Write daemon.json
   copy: 
     content: "{{ daemon | to_nice_json }}" 
     dest: /etc/docker/daemon.json
-  when: check_port.state != "started"
 
 - name: restart and docker
   systemd:
     name: docker
     state: restarted
-  when: check_port.state != "started"
+  
