--- a/roles/prometheus/tasks/docker_exporter.yml
+++ b/roles/prometheus/tasks/docker_exporter.yml
@@ -24,9 +24,14 @@
           }
       when: not stat_result.stat.exists
 
+    - name: Load daemon.json from file
+      slurp:
+        src: /etc/docker/daemon.json
+      register: daemon
+
     - name: Load daemon.json
       set_fact:
-        daemon: "{{ lookup('file', '/etc/docker/daemon.json') | from_json }}"
+        daemon: "{{ daemon.content | b64decode | from_json }}"
 
     - name: debug daemon
       debug:
